# FedLearn-Flower-Docker

./: .gitignore  README.md  clientapp.Dockerfile  dockerscript.py  flower.federatedlearning.1-0-0.3fd59cf0.fab  flower.quickstart-docker.1-0-0.1f2ed9d9.fab  pyproject.toml
fedlearn_app/: client_app.py  server_app.py
flwrvenv/: pyvenv.cfg
quickstart_docker/: client_app.py  server_app.py
