[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickstart-docker"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr==1.14.0",
    "flwr-datasets[vision]>=0.3.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flower"

[tool.flwr.app.components]
serverapp = "quickstart_docker.server_app:app"
clientapp = "quickstart_docker.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10
fraction-fit = 0.5
local-epochs = 1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
insecure = true
