[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "federatedlearning"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "numpy<2",
    "flwr==1.14.0",
    "flwr-datasets[vision]>=0.3.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flower"

[tool.flwr.app.components]
serverapp = "fedlearn_app.server_app:app"
clientapp = "fedlearn_app.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 5
fraction-fit = 0.5
local-epochs = 2

[tool.flwr.federations]
default = "local-deployment"

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
insecure = true

[tool.flwr.federations.local-simulation]
options.num-supernodes = 4